Prevent overflow-x

--- a/public/styles/account.css
+++ b/public/styles/account.css
@@ -22,6 +22,7 @@ body {
 	margin: 0 0 70px;
 	color: #333;
 	font-family: 'Proxima Nova', Helvetica Neue, Helvetica, Arial, sans-serif;
+	overflow-x: hidden;
 }
 
 body.account-home {
